examples/bad/syntax_err_01.ez
f : a -> b;
f quack = duck + quack +;
